src/main/resources/static/css/styles.css
/* Apply a global background color */
html, body {
    height: 100%;
    margin: 0;
    background-color: #7b96c9;
    font-family: Arial, sans-serif;
}

#tooLong {
    height: auto;
}

/* Style the navbar */
.navbar {
    background-color: #343a40;
}

.navbar .navbar-brand, .navbar .nav-link {
    color: white;  /* Set navbar text color to white */
}

.navbar .nav-link:hover {
    color: #d4d4d4;
}

/* Center the form container horizontally */
.form-container {
    display: flex;
    justify-content: center; /* Horizontally center the form */
    padding-top: 5px; /* Add some padding from the top */
}

/* Customize form styling */
form, #product-form{
    text-align: center;
    padding: 20px;
    display: inline-block;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-collapse: separate;
    border-spacing: 10px;
}

/* Input field styles */
form input[type="text"], form input[type="password"] {
    color: rgb(68, 62, 62);
    background-color: #f0f0f0;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 5px;
    margin-bottom: 10px;
}

/* Submit button styling */
form button, #form-button {
    background-color: #343a40;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
}

form button:hover {
    background-color: #292929;
}

form input[type="text"], form input[type="number"], form textarea {
    width: 100%; /* Make input fields take the full width */
    margin: 5px 0;
    padding: 5px;
}

form textarea {
    resize: vertical;
    height: 60px;
}

#id-style {
    padding-left: 2px;
    padding-right: 2px;
    background-color: #121212;
    border-color: rgb(133, 133, 133);
    border-radius: 1px;
    border-style: double;
    color: white;
}

#product-form {
    display:table;
    padding-left: 5px;
    padding-right: 5px;
    margin-left: auto;
    margin-right: auto;
}

#form-button {
    padding: 5px 15px;
}

